--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   font-family: sans-serif;
+  background-image: url(photos/tawerna2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #ekwipunek {
@@ -14,6 +17,9 @@ body {
   margin: auto;
   padding: 10px;
   gap: 10px;
+  background-image: url(photos/bursztyn.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #lewy {
@@ -138,6 +144,9 @@ body {
   border: 4px solid #000;
   padding: 10px;
   box-sizing: border-box;
+  background-image: url(photos/bursztyn.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* Sloty */
