--- a/walka.css
+++ b/walka.css
@@ -22,7 +22,9 @@ h2 {
 }
 
 /* Awatary i nazwy */
-.avatar-container {
+.avatar-container-left {
+  grid-column: 2 / 3;
+  grid-row: 2 / span 2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +44,7 @@ h2 {
 
 .avatar-left {
   grid-column: 2 / 3;
-  grid-row: 2 / 4;
+  grid-row: 2 / span 2;
   min-width: 40px;
   max-width: 400px;
   min-height: 45px;
@@ -55,6 +57,20 @@ h2 {
   max-width: 100%;
   max-height: 100%;
   border-radius: 10px;
+}
+
+.avatar-container-right {
+  grid-column: 6 / 7;
+  grid-row: 2 / span 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgray;
+  border: 2px solid black;
+  border-radius: 10px;
+  color: #fff;
+  text-shadow: 1px 1px 3px black;
 }
 
 .avatar-right {
@@ -124,7 +140,7 @@ h2 {
 
 #panel_glowny {
     grid-row: 3 / 6;
-    grid-column: 4 / 5;
+    grid-column: 3 / 6;
     background-color: #e8e8ff;
     border: 2px solid black;
     padding: 20px;
@@ -151,9 +167,13 @@ h2 {
 }
 
 #akcje_walki {
-    grid-row: 6 / 7;
+    grid-row: 2 / 3;
     grid-column: 4 / 5;
     text-align: center;
+    justify-content: end;
+    align-items: center;
+    justify-self: center;
+    align-self: end;
 }
 
 #akcje_walki button {
@@ -165,6 +185,7 @@ h2 {
     border: 2px solid black;
     background-color: #ffe;
     transition: background-color 0.2s ease;
+    text-align: center;
 }
 
 #akcje_walki button:hover:not(:disabled) {
@@ -177,38 +198,54 @@ h2 {
 }
 
 .menu-wrapper {
-    position: relative;
+    position: absolute;
+    top: 20px;       /* nie przy krawędzi */
+    left: 20px;      /* nie przy krawędzi */
 }
 
 #menuToggle {
-    font-size: 20px;
-    padding: 10px 20px;
+    background-color: #333;  /* ciemnoszary */
+    color: white;
+    padding: 10px 15px;
+    border: none;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 #dropdownMenu {
-  position: absolute;
-  top: 40px;
-  left: 0;
-  background: #222;
-  border: 1px solid #333;
-  border-radius: 5px;
-  z-index: 1000;
+    margin-top: 5px;
+    background-color: #444;  /* nieco jaśniejszy szary */
+    border-radius: 4px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+    overflow: hidden;
 }
 
 #dropdownMenu ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 #dropdownMenu li a {
-  display: block;
-  padding: 10px 15px;
-  color: white;
-  text-decoration: none;
+    display: block;
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
 }
 
 #dropdownMenu li a:hover {
-  background-color: #444;
+    background-color: #555;
 }
+
+.hidden {
+    display: none;
+}
+
+#btn_zakoncz{
+  text-align: center !important;
+}
+
+.green { color: green; }
+.red { color: red; }
+.orange { color: orange; }
+.black { color: black; }
